# z-ray

./: .gitignore  CMakeLists.txt  README.md
src/: camera.h  color.h  image.c  image.h  intersection.h  main.c  material.h  math_utils.c  math_utils.h  object.c  object.h  random.c  random.h  ray.h  render.c  render.h  scene.c  scene.h  sphere.h  vec.c  vec.h
